# NixCppService

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Service.cpp  ServiceImpl.cpp  ServiceImpl.hpp
src/include/cppservice/: Service.hpp
tests/: CMakeLists.txt  ServiceTests.cpp
